--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "CrispysCode <pr0ject0dinx@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
